--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <style type="text/css">
 
              #mynetwork {
-                 width: 100%;
-                 height: 750px;
+                 width: 1920px;
+                 height: 1080px;
                  background-color: #222222;
                  border: 1px solid lightgray;
                  position: relative;
@@ -45,8 +45,8 @@
                  position:absolute;
                  top:0px;
                  left:0px;
-                 width: 100%;
-                 height: 750px;
+                 width: 1920px;
+                 height: 1080px;
                  background-color:rgba(200,200,200,0.8);
                  -webkit-transition: all 0.5s ease;
                  -moz-transition: all 0.5s ease;
